{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 78,
  "lineage": "eab3e0a9-a7e8-ce91-b35b-abaaa3681e29",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-08T01:37:16.127-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hpe-managed-services/global/firewalls/allow-kalaasetu-http-8000",
            "log_config": [],
            "name": "allow-kalaasetu-http-8000",
            "network": "https://www.googleapis.com/compute/v1/projects/hpe-managed-services/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "hpe-managed-services",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hpe-managed-services/global/firewalls/allow-kalaasetu-http-8000",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-08T01:37:16.616-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hpe-managed-services/global/firewalls/allow-kalaasetu-ssh",
            "log_config": [],
            "name": "allow-kalaasetu-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/hpe-managed-services/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "hpe-managed-services",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hpe-managed-services/global/firewalls/allow-kalaasetu-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kalaasetu_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/deeplearning-platform-release/global/images/common-cu128-ubuntu-2204-nvidia-570-v20250728",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 150,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hpe-managed-services/zones/us-central1-a/disks/kalaasetu-demo-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2025-08-08T01:37:20.326-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "guest_accelerator": [
              {
                "count": 1,
                "type": "https://www.googleapis.com/compute/v1/projects/hpe-managed-services/zones/us-central1-a/acceleratorTypes/nvidia-tesla-t4"
              }
            ],
            "id": "projects/hpe-managed-services/zones/us-central1-a/instances/kalaasetu-demo-vm",
            "instance_id": "4237562492755642833",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-4",
            "metadata_fingerprint": "CViVPWRVLKs=",
            "metadata_startup_script": "#!/bin/bash\nset -e\nset -o pipefail\n\necho \"--- Starting Kalaa-Setu VM Setup ---\"\n\n# 1. Update system and install basic dependencies\necho \"[1/6] Updating system and installing dependencies...\"\nsudo apt-get update -y\nsudo apt-get install -y git docker.io curl gnupg lsb-release python3-venv python3-pip\nmkdir -p ~/.docker/cli-plugins/\ncurl -SL https://github.com/docker/compose/releases/latest/download/docker-compose-linux-x86_64 -o ~/.docker/cli- [...]
            "name": "kalaasetu-demo-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.29.237.159",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hpe-managed-services/global/networks/default",
                "network_ip": "10.128.0.28",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hpe-managed-services/regions/us-central1/subnetworks/default",
                "subnetwork_project": "hpe-managed-services"
              }
            ],
            "project": "hpe-managed-services",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hpe-managed-services/zones/us-central1-a/instances/kalaasetu-demo-vm",
            "service_account": [
              {
                "email": "911513724271-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "ssh-server"
            ],
            "tags_fingerprint": "3eL4F_0TT2s=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}